compiler/testData/diagnostics/tests/sealed/NeverDerived.kt
sealed class Base {

}

class Derived: <!FINAL_SUPERTYPE!>Base<!>() {

}
